Fix some swagger docstrings for the Api endpoint
