# docs/swagger.json
@@ -4,12 +4,21 @@
         "contact": {}
     },
     "paths": {
-        "/api/clusters/{id}/results": {
+        "/api/clusters/{cluster_id}/results": {
             "get": {
                 "produces": [
                     "application/json"
                 ],
                 "summary": "Get a specific cluster's check results",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Cluster Id",
+                        "name": "cluster_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -85,7 +94,7 @@
                 }
             }
         },
-        "/api/clusters/{name}/tags/{tag}": {
+        "/api/clusters/{id}/tags/{tag}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -98,7 +107,7 @@
                     {
                         "type": "string",
                         "description": "Cluster id",
-                        "name": "cluster",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     },
@@ -121,7 +130,7 @@
                 }
             }
         },
-        "/api/databases/{id}/tags": {
+        "/api/databases/{sid}/tags": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -134,7 +143,7 @@
                     {
                         "type": "string",
                         "description": "Database id",
-                        "name": "id",
+                        "name": "sid",
                         "in": "path",
                         "required": true
                     },
@@ -185,7 +194,7 @@
                 }
             }
         },
-        "/api/databases/{name}/tags/{tag}": {
+        "/api/databases/{sid}/tags/{tag}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -198,7 +207,7 @@
                     {
                         "type": "string",
                         "description": "Database id",
-                        "name": "id",
+                        "name": "sid",
                         "in": "path",
                         "required": true
                     },
@@ -321,7 +330,7 @@
                 }
             }
         },
-        "/api/sapsystems/{id}/tags": {
+        "/api/sapsystems/{sid}/tags": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -334,7 +343,7 @@
                     {
                         "type": "string",
                         "description": "SAPSystem id",
-                        "name": "id",
+                        "name": "sid",
                         "in": "path",
                         "required": true
                     },
@@ -385,7 +394,7 @@
                 }
             }
         },
-        "/api/sapsystems/{name}/tags/{tag}": {
+        "/api/sapsystems/{sid}/tags/{tag}": {
             "delete": {
                 "consumes": [
                     "application/json"
@@ -398,7 +407,7 @@
                     {
                         "type": "string",
                         "description": "SAPSystem id",
-                        "name": "id",
+                        "name": "sid",
                         "in": "path",
                         "required": true
                     },
@@ -434,7 +443,7 @@
                     {
                         "type": "string",
                         "description": "Filter by resource type",
-                        "name": "resourceType",
+                        "name": "resource_type",
                         "in": "query"
                     }
                 ],
